edited HTMLTerminal text file  and CSS with answers requested in comments

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -11,15 +11,27 @@
 </head>
 <body>
     <!-- Create a header element  -->
-
+    <header>
     <!-- Inside the header, add an <h1> element containing your name -->
-
+    
+        <h1> Astrid Pulse</h1>
+    </header>
     <!-- Include an image -->
 
+    <img src="https://scontent-msp1-1.xx.fbcdn.net/v/t39.30808-6/300340834_804089147677263_1781021817671408243_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=kIUDPFfHwWgAX9HkTRm&_nc_ht=scontent-msp1-1.xx&oh=00_AT9gBJJfBelK_MJEHxelXn58UyoeqLeXRY_TcDkyuDMQHA&oe=6303FE9E" alt="friday again garfie baby">
+
     <!-- Create an unordered list with 3 list items of fun facts about you -->
+    <ul>
+        <li> I like to listen to music </li>
+        <li> I like to play music </li>
+        <li> I am a fairly tall person </li>
+    </ul>
 
     <!-- Create a footer element -->
-
+    <footer>
     <!-- Inside your footer, put a <p> element with your favorite quote -->
+    
+        <p>Friday again Garfie baybeeeee </p>
+    </footer>
 </body>
 </html>
